force-app/main/default/objects/AccountContactRelation/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <description>This field is used to store address of AuthRep/Assiter/Agent.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AddressLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>