force-app/main/default/objects/AccountContactRelation/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This  field is used to store address of AuthRep/Assiter/Agent</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>