force-app/main/default/objects/AccountContactRelation/fields/ConsentDate__c.field-meta.xml
<CustomField>
    <fullName>ConsentDate__c</fullName>
    <description>consent date in signature for adding this auth rep</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent Date</label>
    <type>Date</type>
</CustomField>