force-app/main/default/objects/AccountContactRelation/fields/CountyCode__c.field-meta.xml
<CustomField>
    <fullName>CountyCode__c</fullName>
    <description>This  field is used to store address of AuthRep/Assiter/Agent</description>
    <label>CountyCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SSPCounty</valueSetName>
    </valueSet>
</CustomField>