force-app/main/default/objects/AccountContactRelation/fields/DCACRID__c.field-meta.xml
<CustomField>
    <fullName>DCACRID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DCACRID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>