force-app/main/default/objects/AccountContactRelation/fields/DCAgencyId__c.field-meta.xml
<CustomField>
    <fullName>DCAgencyId__c</fullName>
    <label>DCAgencyId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>