force-app/main/default/objects/AccountContactRelation/fields/DCContactId__c.field-meta.xml
<CustomField>
    <fullName>DCContactId__c</fullName>
    <externalId>true</externalId>
    <label>DCContactId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>