force-app/main/default/objects/AccountContactRelation/fields/DCRepresentativeId__c.field-meta.xml
<CustomField>
    <fullName>DCRepresentativeId__c</fullName>
    <description>This field is used to indicate the unique representative for an external system</description>
    <label>DCRepresentativeId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>