force-app/main/default/objects/AccountContactRelation/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>first name in signature of HoH who is adding this auth rep</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>