force-app/main/default/objects/AccountContactRelation/fields/IsAddressValidated__c.field-meta.xml
<CustomField>
    <fullName>IsAddressValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the Authorised representative address is validatedThis field is used to indicate whether the Authorised representative address is validated</description>
    <label>Is Address Validated</label>
    <type>Checkbox</type>
</CustomField>