force-app/main/default/objects/AccountContactRelation/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delete Indicator for Agent/Auth rep update SSPDC service call</description>
    <inlineHelpText>Delete Indicator for Agent/Auth rep update SSPDC service call</inlineHelpText>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>