force-app/main/default/objects/AccountContactRelation/fields/IsRepresentativeVerified__c.field-meta.xml
<CustomField>
    <fullName>IsRepresentativeVerified__c</fullName>
    <description>This field is used to indicate whether the representative is verified</description>
    <label>IsRepresentativeVerified</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>