force-app/main/default/objects/AccountContactRelation/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <description>middle name initial in the signature of this HoH while adding this auth rep</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Middle Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>