force-app/main/default/objects/AccountContactRelation/fields/PermissionLevel_KIHIPP__c.field-meta.xml
<CustomField>
    <fullName>PermissionLevel_KIHIPP__c</fullName>
    <description>select the applicable permissions for this program</description>
    <label>Level of Permission CCAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Permission_Level</valueSetName>
    </valueSet>
</CustomField>