force-app/main/default/objects/AccountContactRelation/fields/Relationship_Strength__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Strength__c</fullName>
    <label>Relationship Strength</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Strong</fullName>
                
                
                    <label>Strong</label>
                
                </value>
            
                <value>
                
                    <fullName>Neutral</fullName>
                
                
                    <label>Neutral</label>
                
                </value>
            
                <value>
                
                    <fullName>Weak</fullName>
                
                
                    <label>Weak</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>