force-app/main/default/objects/AccountContactRelation/fields/RequestAccessPermission__c.field-meta.xml
<CustomField>
    <fullName>RequestAccessPermission__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Access Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>