force-app/main/default/objects/AccountContactRelation/fields/SSP_State__c.field-meta.xml
<CustomField>
    <fullName>SSP_State__c</fullName>
    <description>This  field is used to store address of AuthRep/Assiter/Agent</description>
    <label>SSP State</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPState</valueSetName>
        
        </valueSet>
</CustomField>