force-app/main/default/objects/AccountContactRelation/fields/SuffixCode__c.field-meta.xml
<CustomField>
    <fullName>SuffixCode__c</fullName>
    <description>suffix code in signature to add this auth rep</description>
    <label>Suffix Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Suffix</valueSetName>
    </valueSet>
</CustomField>