force-app/main/default/objects/AccountContactRelation/fields/Zipcode4__c.field-meta.xml
<CustomField>
    <fullName>Zipcode4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code (Four Digit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>