force-app/main/default/objects/AccountContactRelation/fields/Zipcode5__c.field-meta.xml
<CustomField>
    <fullName>Zipcode5__c</fullName>
    <description>This  field is used to store address of AuthRep/Assiter/Agent</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code (Five Digit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>